assets/css/modules/_page.scss
//
// Page
//
.page-wrapper {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
@each $color, $value in $theme-colors {
    .page-background-#{$color} {
        color: color-contrast($value);
        background-color: $value;
    }
}
.page-header {
    flex-grow: 0;
    flex-shrink: 0;
}
.page-main {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}
.page-main-container {
    @include make-container-max-widths();
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    padding: 0 20px;
    margin: 0 auto;
    width: 100%;
}
.page-main-sidebar {
    > *:last-child {
        padding-bottom: 0;
        margin-bottom: 0;
    }
}
@media (min-width: 768px) {
    .page-main-container {
        flex-direction: row;
    }
    .page-main-content {
        flex: 1 1 0;
        min-width: 0;
    }
    .page-main-sidebar {
        margin-top: 0;
        width: 250px;
        margin-right: 40px;
        flex-shrink: 0;
    }
}
.page-footer {
    flex-grow: 0;
    flex-shrink: 0;
}
.page-footer-social {
    text-align: center;
    list-style: none;
    padding: 0;
    font-size: 1.25em;
    margin-bottom: 1rem;
    li {
        display: inline-block;
        margin: 0 1px;
    }
}
.page-footer-social-link {
    color: inherit;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 2em;
    height: 2em;
    background-color: rgba(255, 255, 255, .05);
    border-radius: 4px;
    &:hover {
        color: inherit;
        background-color: rgba(255, 255, 255, .1);
    }
}
.page-footer-meta {
    text-align: center;
}
.page-footer-copyright,
.page-footer-menu {
    display: inline-block;
    vertical-align: middle;
    padding: .25rem .5rem;
}
.page-footer-copyright {
    a {
        color: inherit;
    }
}
.page-footer-menu {
    .navbar-nav {
        display: inline-block;
    }
    .nav-item {
        display: inline-block;
        padding: 0 .5rem;
    }
    .nav-link {
        opacity: .5;
        padding: 0;
        color: inherit;
        &:focus,
        &:hover {
            opacity: .75;
        }
    }
}

